jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jenkins-ingress
    namespace: jenkins
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
    - host: jenkins.34.174.133.138.nip.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port: 
                number: 8080
